--- a/src/app/public/pages/search-results/search-results.component.scss
+++ b/src/app/public/pages/search-results/search-results.component.scss
@@ -3,11 +3,11 @@
 // =============================================================================
 
 .search-page {
-  padding-top: 120px;
+  padding-top: 0;
   padding-bottom: 96px;
 
   @media (max-width: 767px) {
-    padding-top: 92px;
+    padding-top: 0;
     padding-bottom: 48px;
   }
 
